Fixed missing districts

--- a/C16/L1.css
+++ b/C16/L1.css
@@ -334,7 +334,36 @@
         .subunit.Gumla { fill: #B3260C; }
         .subunit.Pashchimi_Singhbhum { fill: #B38E15; }
         .subunit.Purbi_Singhbhum { fill: #E01A23; }
+        .subunit.Bargarh { fill: #EB4750; }
+        .subunit.Jharsuguda { fill: #EB4750; }
+        .subunit.Sambalpur { fill: #EB4750; }
+        .subunit.Debagarh { fill: #EB4750; }
+        .subunit.Sundargarh { fill: #EB4750; }
+        .subunit.Kendujhar { fill: #EB4750; }
+        .subunit.Mayurbhanj { fill: #EB4750; }
+        .subunit.Baleshwar { fill: #EB4750; }
+        .subunit.Bhadrak { fill: #EB4750; }
+        .subunit.Kendrapara { fill: #EB4750; }
+        .subunit.Jagatsinghapur { fill: #EB4750; }
+        .subunit.Cuttack { fill: #EB4750; }
+        .subunit.Jajapur { fill: #EB4750; }
         .subunit.Dhenkanal { fill: #EB4750; }
+        .subunit.Anugul { fill: #EB4750; }
+        .subunit.Nayagarh { fill: #EB4750; }
+        .subunit.Khordha { fill: #EB4750; }
+        .subunit.Puri { fill: #EB4750; }
+        .subunit.Ganjam { fill: #EB4750; }
+        .subunit.Gajapati { fill: #EB4750; }
+        .subunit.Kandhamal { fill: #EB4750; }
+        .subunit.Baudh { fill: #EB4750; }
+        .subunit.Sonapur { fill: #EB4750; }
+        .subunit.Balangir { fill: #EB4750; }
+        .subunit.Nuapada { fill: #EB4750; }
+        .subunit.Kalahandi { fill: #EB4750; }
+        .subunit.Rayagada { fill: #EB4750; }
+        .subunit.Nabarangapur { fill: #EB4750; }
+        .subunit.Koraput { fill: #EB4750; }
+        .subunit.Malkangiri { fill: #EB4750; }
         .subunit.Koriya { fill: #B3260C; }
         .subunit.Surguja { fill: #B3260C; }
         .subunit.Jashpur { fill: #B3260C; }
